# glassworm

./: .env.example  .gitignore  Cargo.toml  HANDOFF.md  LICENSE  QWEN.md  README.md
glassware-cli/: Cargo.toml
glassware-cli/src/: main.rs
glassware-core/: Cargo.toml
glassware-core/src/: classify.rs  config.rs  decoder.rs  detector.rs  encrypted_payload_detector.rs  engine.rs  finding.rs  gw005_semantic.rs  gw006_semantic.rs  gw007_semantic.rs  gw008_semantic.rs  header_c2_detector.rs  lib.rs  ranges.rs  scanner.rs  script_detector.rs  semantic.rs  taint.rs  unicode_detector.rs
glassware-core/src/confusables/: data.rs  mod.rs
glassware-core/src/detectors/: bidi.rs  glassware.rs  homoglyph.rs  invisible.rs  mod.rs  tags.rs
glassware-core/src/llm/: analyzer.rs  config.rs  mod.rs
glassware-core/tests/: integration_campaign_fixtures.rs  integration_edge_cases.rs  integration_false_positives.rs  integration_scan_directory.rs
glassware-core/tests/fixtures/edge_cases/: comment_obfuscation.js  conditional_eval.js  eval_via_function_constructor.js  eval_via_indirect.js  hex_encoded_strings.js  minified_payload.js  split_across_files.js  split_across_files_helper.js  template_literal_obfuscation.js  try_catch_wrapped.js  unicode_escape_sequences.js  variable_renamed.js
glassware-core/tests/fixtures/false_positives/: base64_config.js  buffer_transform.js  build_script.js  checksum_xor.js  i18n_locale_check.js  legitimate_crypto.js  legitimate_crypto_config.js  normal_api_client.js  source_map.js  ssr_fetch_render.js  svg_data_uri.js  unicode_normalization.js
glassware-core/tests/fixtures/glassworm/: extension_dependency_abuse.json  malicious_extension.js  shai_hulud_worm.js  wallet_hijack_browser.js  wave1_calendar_c2.js  wave1_pua_decoder.js  wave4_encrypted_payload.js  wave5_aes_decrypt_eval.js  wave5_credential_theft.js  wave5_mcp_server.ts  wave5_persistence.js  wave5_preinstall_loader.js  wave5_solana_loader.js
