[package]
name = "glassware-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Unicode attack detection library for GlassWare-style trojan source attacks"
keywords = ["unicode", "security", "trojan-source", "glassware", "scanner"]
categories = ["security", "text-processing"]

[dependencies]
# Core dependencies - minimal
unicode-script = "0.5"  # Essential for homoglyph/script detection

# Optional dependencies
regex = { version = "1.10", optional = true }  # For GlassWare pattern detection
serde = { version = "1.0", features = ["derive"], optional = true }  # For serialization
serde_json = { version = "1.0", optional = true }  # For JSON serialization
lazy_static = { version = "1.4", optional = true }  # For static pattern initialization
once_cell = { version = "1.19", optional = true }  # For lazy regex compilation

# OXC semantic analysis (optional, JS/TS only)
oxc_allocator = { version = "0.40", optional = true }
oxc_parser = { version = "0.40", optional = true }
oxc_semantic = { version = "0.40", optional = true }
oxc_span = { version = "0.40", optional = true }
oxc_ast = { version = "0.40", optional = true }
oxc_index = { version = "2.0", optional = true }

# LLM analysis (optional, for L3 review layer)
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], optional = true }
dotenvy = { version = "0.15", optional = true }

[features]
default = ["full"]
full = ["regex", "serde", "serde_json", "lazy_static", "once_cell", "semantic"]
minimal = []  # Minimal: invisible chars and bidi only (no regex needed)
regex = ["dep:regex"]  # Enable regex-based pattern detection
lazy_static = ["dep:lazy_static"]  # Enable lazy static initialization
once_cell = ["dep:once_cell"]  # Enable once_cell for lazy regex
serde = ["dep:serde"]  # Enable serialization support
serde_json = ["dep:serde_json"]  # Enable JSON serialization
semantic = [
    "dep:oxc_allocator",
    "dep:oxc_parser",
    "dep:oxc_semantic",
    "dep:oxc_span",
    "dep:oxc_ast",
    "dep:oxc_index",
    "regex",
    "once_cell",
]
llm = ["dep:reqwest", "dep:dotenvy", "serde", "serde_json"]  # LLM analysis layer

[dev-dependencies]
tempfile = "3.9"
